# vibrantize

./: BreezeConfig.cmake.in  CMakeLists.txt  README.md
colors/: CMakeLists.txt  VibrantizeClassic.colors  VibrantizeDark.colors  VibrantizeLight.colors
kdecoration/: CMakeLists.txt  breezesettingsdata.kcfg  breezesettingsprovider.cpp
kdecoration/config/: CMakeLists.txt  breezeconfigwidget.cpp  breezeexceptionlistwidget.cpp  kcm_breezedecoration.cpp  kcm_vibrantizedecoration.json
kstyle/: CMakeLists.txt  breeze.json  breeze.themerc  breezehelper.cpp  breezestyle.cpp  breezestyleplugin.cpp  vibrantize.desktop  vibrantize.themerc
kstyle/config/: CMakeLists.txt  breezestyleconfigmodule.cpp  main.cpp  vibrantizestyleconfig.json
libbreezecommon/: CMakeLists.txt
